--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -10,6 +10,9 @@
     flex-wrap: wrap;
   }
 }
+.festures__text {
+  @include font-source(14px, 400, 24px, 0.03em);
+}
 
 .features__item {
   margin-top: 30px;
@@ -44,13 +47,13 @@
 }
 
 .features__title {
+  @include font-source(14px, 700, 16px, 0.03em);
   text-align: center;
   margin-bottom: 10px;
-  font-weight: 700;
-  line-height: 1.14;
   text-transform: uppercase;
   color: $primary-text-color;
   @media screen and (min-width: 768px) {
     text-align: left;
   }
 }
+
