--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -12,6 +12,7 @@
 }
 
 .form__field {
+  @include font-source(12px, 400, 14px, 0.01em);
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -66,12 +67,8 @@
   line-height: 1.16;
 }
 
- @include centeredFlex;
-
-
-
-  font-size: 14px;
-  line-height: 1.71;
+  @include centeredFlex;
+  @include font-source(14px, 400, 24px, 0.03em);
   margin-bottom: 30px;
 }
 
