--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -55,9 +55,10 @@
 }
 
 .team__text {
-  font-size: 16px;
-  line-height: 1.18;
-  margin-bottom: 16px;
+  @include font-source(16px, 400, 19px, 0.03em);
+  // font-size: 16px;
+  // line-height: 1.18;
+  // margin-bottom: 16px;
 }
 
 .social {
