--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -18,7 +18,19 @@
 }
 
 .filter__item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+  &:nth-child(3) {
+    margin-right: 0;
+  }
   margin-right: 8px;
+}
+}
+
+.filter__item:not(:last-child) {
+  @media screen and (min-width: 768px) {
+  
+  margin-right: 8px;
+}
 }
 
 .filter__item:nth-child(-n + 3) {
