--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -68,6 +68,7 @@
 
   @media screen and (max-width: 767px) {
     margin-bottom: 60px;
+    margin-top: 60px;
   }
 
   @media screen and (min-width: 1200px) {
